fix(lint): 批次 A 清理 190 处空体控制语句并修复关联行为问题
- AI2 阶段守卫反转（if(已死/未开始){空} else{工作} → if(存活&&开始){工作}，行为保持）
- CAS 副作用条件转裸调用（isAggred.compareAndSet）
- 副本计数空链分支删除（ideanKilled/cloneModorKilled/bossWitch 等，==N 互斥安全）
- 服务层 state.equals 死 if 删除（14 处，过滤已在循环内模板匹配完成）
- 条件副作用恢复为裸调用：EnchantService/AssemblyItemAction/ItemUseAction/AnimationAddAction
  的物品消耗调用曾被空 if 吞掉结果，现保留消耗语义
- 行为修复：Outpost/Base 补回 getFlag() 空守卫（避免 NPE）；CM_FRIEND_ADD 补全
  好友列表满员拒绝分支（TARGET_LIST_FULL，上游缺失逻辑）
- 持久化守卫/特例分支反转（LandingLocation/Town/ItemEquipmentListener/CM_RELEASE 等）
- 注释占位清理：QuestService CP 待实现、VertexBuffer/SM_* 注释体分支、
  VeteranRewards 配置日志死 if ×4、AnimationAddAction 死 else ×5
- 有意保留：3 处测试 while 游标推进、do-while 尾（IntMap 等）、OOM 预留点
- 验证：101 文件 IDEA lint 0 error；XmlDataLoader 报错为用户并行重构，与本批无关

Co-Authored-By: Claude Code <noreply@anthropic.com>